spoolman/spoolman.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spoolman
  namespace: spoolman
  labels:
    app: spoolman
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spoolman
  template:
    metadata:
      labels:
        app: spoolman
    spec:
      containers:
      - name: nginx
        image: ghcr.io/donkie/spoolman:0.22.1
        ports:
        - containerPort: 7912
