spoolman/spoolman.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-service
  namespace: sppolman
spec:
  selector:
    matchLabels:
      app: spoolman
  ports:
    - protocol: TCP
      port: 7912
