spoolman/spoolman.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spoolman
  namespace: spoolman
  annotations:
    cert-manager.io/cluster-issuer: cloudflare-issuer
spec:
  rules:
  - host: spoolman.nikolaiathome.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: spoolman
            port:
              number: 7912
  tls:
  - hosts:
    - spoolman.nikolaiathome.com
    secretName: spoolman-tls-cert
